--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <button id="btn-1">Get Started </button>
               </div>
               <div class="inner-section section-2">
-                <img src="./29750.jpg" alt="">
+                <img src="./29750.jpg" alt="" loading="lazy">
               </div>
             </div>
 
@@ -308,7 +308,7 @@
                 <button>Get Started </button>
               </div>
               <div class="inner-section section-2">
-                <img src="photo-1515630771457-09367d0ae038.avif" alt="">
+                <img src="photo-1515630771457-09367d0ae038.avif" alt="" loading="lazy">
               </div>
             </div>
           </div>
@@ -327,7 +327,7 @@
                 <button>Get Started </button>
               </div>
               <div class="inner-section section-2">
-                <img src="photo-1515630771457-09367d0ae038.avif" alt="">
+                <img src="photo-1515630771457-09367d0ae038.avif" alt="" loading="lazy">
               </div>
             </div>
           </div>
@@ -354,10 +354,10 @@
             example.</p>
         </div>
         <div class="inner-section inner-section2">
-          <video autoplay>
-            <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+          <video autoplay loop>
+            <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4" >
             Your browser does not support the video tag.
-          </video>
+          </video >
         </div>
       </div>
     </section>
